# rust-node_kafka_perf

./: .gitignore  README.md  artillery-api-load-test.yml  cdk.context.json  cdk.json  package-lock.json  package.json  sample-payload.json
constructs/: kafka-lambda-node.ts  kafka-lambda-rust.ts
lib/: rust-kafka-stack.ts
src/: Cargo.toml
src/handlers/kafka-lambda/: Cargo.toml
src/handlers/kafka-lambda-node/: index.ts
src/handlers/kafka-lambda-node/utils/: collector.yaml  logger.ts
src/handlers/kafka-lambda/src/: kafka_producer.rs  main.rs
src/rust/observability/: Cargo.toml
src/rust/observability/src/: lib.rs
test/: rust-kafka.test.ts
