[workspace]
resolver = "2"
members = [
  "handlers/kafka-lambda",
  "rust/observability"
]

[workspace.dependencies]
aws-config = "1.5.11"
aws-sdk-dynamodb = "1.56.0"
lambda_runtime = "0.13.0"
rdkafka = { version = "0.37.0", features = ["cmake-build"] }
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.24.0"
tracing-subscriber = "0.3.8"
uuid = { version = "1.11.0", features = ["v7"]}
aws_lambda_events = "0.16.0"
lambda_http = "0.14.0"

opentelemetry-semantic-conventions = "0.25"
opentelemetry-stdout = "0.4.0"

serde = "1.0.217"
serde_json = "1.0.134"

opentelemetry = { version = "0.23", features = ["trace"] }
opentelemetry-datadog = { version = "0.11.0", features = ["reqwest-client"] }
opentelemetry_sdk = { version = "0.23", features = ["trace","rt-tokio"] }
opentelemetry-http = { version = "0.12", features = ["reqwest"] }