[package]
name = "kafka-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
observability = {path = "../../rust/observability"}

lambda_runtime = {workspace = true}
rdkafka = { version = "0.37.0", features = ["cmake-build"] }
serde_json = {workspace = true}
tokio = {workspace = true}
uuid = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
lambda_http = {workspace = true}
aws_lambda_events = {workspace = true}
serde = {workspace = true}
opentelemetry = {workspace = true}