[package]
name = "observability"
version = "0.1.0"
edition = "2021"

[dependencies]
aws_lambda_events = {workspace = true}
lambda_http = {workspace = true}
opentelemetry = {workspace = true}
opentelemetry-datadog = {workspace = true}
opentelemetry-http = {workspace = true}
opentelemetry-semantic-conventions = {workspace = true}
opentelemetry-stdout = {workspace = true}
opentelemetry_sdk = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
tracing-opentelemetry = {workspace = true}
tracing-subscriber = {workspace = true}
